refactor: change ts type generator
